// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makePlugin 1`] = `
"
          <pluginprovider
            name='test'
            plugins=!{props.plugins!}
            options=!{{\\"options\\":[],\\"properties\\":{}}!}
          >
        </pluginprovider>"
`;

exports[`makePlugin 2`] = `
"
          <pluginprovider
            name='test'
            plugins=!{props.plugins!}
            options=!{{\\"options\\":[\\"with\\",\\"some\\",\\"options\\"],\\"properties\\":{}}!}
          >
        </pluginprovider>"
`;

exports[`makePlugin 3`] = `
"
          <pluginprovider
            name='test'
            plugins=!{props.plugins!}
            options=!{{\\"options\\":[],\\"properties\\":{\\"with\\":\\"some\\",\\"properties\\":10}}!}
          >
        </pluginprovider>"
`;

exports[`makePlugin 4`] = `
"
          <pluginprovider
            name='test'
            plugins=!{props.plugins!}
            options=!{{\\"options\\":[\\"with\\",\\"both\\"],\\"properties\\":{\\"properties\\":\\"options\\"}}!}
          >
        </pluginprovider>"
`;
